--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -68,7 +68,7 @@
     "    \\\\ &\\to\n",
     "    \\begin{cases}\n",
     "        a_{00} = u_{00},\\ a_{01} = u_{01} \\\\\n",
-    "        a_{10} = l_{10} u_{00},\\ a_{11} = l_{10} u_{01} + c_{11}\n",
+    "        a_{10} = l_{10} u_{00},\\\\ a_{11} = l_{10} u_{01} + c_{11}\n",
     "    \\end{cases}\n",
     "\\end{align}\n",
     "$$\n",
@@ -197,6 +197,7 @@
     "\n",
     "これを用いると\n",
     "$$\n",
+    "\\begin{align}\n",
     "LU = \\begin{pmatrix}\n",
     "    u_{00} & \\begin{matrix} u_{01} & u_{11} \\end{matrix} \\\\\n",
     "    \\begin{matrix} l_{10} u_{00} \\\\ l_{20} u_{00} \\end{matrix} & L_{2} U_{2}\n",
@@ -206,6 +207,7 @@
     "    0 & l_{10} u_{01} & l_{10} u_{02} \\\\\n",
     "    0 & l_{20} u_{01} & l_{20} u_{02}\n",
     "\\end{pmatrix}\n",
+    "\\end{align}\n",
     "$$\n",
     "と書ける．したがって\n",
     "$$\n",
@@ -541,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
