--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -44,7 +44,6 @@
     "**$2 \\times 2$ case**\n",
     "\n",
     "このとき\n",
-    "$$\n",
     "\\begin{align}\n",
     "    &A =\n",
     "    \\begin{pmatrix}\n",
@@ -71,7 +70,6 @@
     "        a_{10} = l_{10} u_{00},\\ a_{11} = l_{10} u_{01} + c_{11}\n",
     "    \\end{cases}\n",
     "\\end{align}\n",
-    "$$\n",
     "これを解くことで$L$と$U$を求めることが出来る．"
    ]
   },
@@ -173,7 +171,7 @@
     "$$\n",
     "これを$A_{2}$に代入して$2 \\times 2$の場合をやれば$L, U$が求まる．具体的には\n",
     "$L, U$の小行列部分を$L_{2}, U_{2}$とすると，\n",
-    "$$\n",
+    "\\begin{align}\n",
     "L = \\begin{pmatrix}\n",
     "    1 & \\begin{matrix} 0 & 0 \\end{matrix} \\\\\n",
     "    \\begin{matrix} l_{10} \\\\ l_{20} \\end{matrix} & L_2\n",
@@ -193,7 +191,7 @@
     "    u_{11} & u_{12} \\\\\n",
     "    0 & u_{22}\n",
     "\\end{pmatrix}\n",
-    "$$\n",
+    "\\end{align}\n",
     "\n",
     "これを用いると\n",
     "$$\n",
@@ -541,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
