--- a/src/Ising_MC/Ising2d_MC.ipynb
+++ b/src/Ising_MC/Ising2d_MC.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 参考\n",
+    "* [[Pythonによる科学・技術計算] ２次元イジングスピン系の熱力学量のメトロポリス法によるモンテカルロシミュレーション](https://qiita.com/sci_Haru/items/45ec84e6eb985f5c53d8)\n",
+    "    \n",
+    "    コード自体は参考にしづらいがモンテカルロ・シミュレーションの書き始めで見てた。\n",
+    "    気持ちだけを汲み取る。\n",
+    "\n",
+    "* [Juliaで学ぶ古典モンテカルロシミュレーション](https://github.com/cometscome/MC)\n",
+    "\n",
+    "    コードそのものはJuliaで書かれているがIsingモデルのシミュレーションそのものの説明とアルゴリズムが参考になる。\n",
+    "    \n",
+    "    コードそのものは簡潔の書かれているが話の流れ上函数同士がとっ散らかっていて迷子になりやすいかも。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 246,
    "metadata": {},
