--- a/src/Ising_MC/Ising2d_MC.ipynb
+++ b/src/Ising_MC/Ising2d_MC.ipynb
@@ -12,9 +12,10 @@
     "\n",
     "* [Juliaで学ぶ古典モンテカルロシミュレーション](https://github.com/cometscome/MC)\n",
     "\n",
-    "    コードそのものはJuliaで書かれているがIsingモデルのシミュレーションそのものの説明とアルゴリズムが参考になる。\n",
+    "    物性の永井さんの解説。\n",
+    "    コードそのものはJuliaで書かれているがIsingモデルのシミュレーションそのものの説明とアルゴリズムが参考になった。\n",
     "    \n",
-    "    コードそのものは簡潔の書かれているが話の流れ上函数同士がとっ散らかっていて迷子になりやすいかも。"
+    "    コードそのものは簡潔の書かれているが話の流れ上函数同士がとっ散らかっていて迷子になった。"
    ]
   },
   {
