--- a/src/Ising_MC/Ising2d_MC.ipynb
+++ b/src/Ising_MC/Ising2d_MC.ipynb
@@ -44,11 +44,11 @@
     "\n",
     "サイト$(i,j)$、$i,j \\in \\mathbb{Z}$、におけるスピンを$\\sigma_{i j} = -1 \\, \\mathrm{or} \\, 1$とおく。\n",
     "サイト数$V$、最近接交換相互作用$J$、磁場$h$に対してハミルトニアンが\n",
-    "`\\begin{align}\n",
-    "\\mathcal{H} \\left( V, \\sigma_V, J, h \\right)\n",
+    "\\begin{align}\n",
+    "`\\mathcal{H} \\left( V, \\sigma_V, J, h \\right)\n",
     "= -J \\sum_{\\langle i, j \\rangle} \\sigma_{i j} \\left(\\sigma_{i+1 \\ j} + \\sigma_{i \\ j+1} \\right) \n",
-    "-h \\sum_{i,j} \\sigma_{i j}\n",
-    "\\end{align}`\n",
+    "-h \\sum_{i,j} \\sigma_{i j}`\n",
+    "\\end{align}\n",
     "で表わされるような模型を2次元Ising模型という。\n",
     "自発磁化をもつ強磁性体を説明する簡単な模型になっている。\n",
     "ただし$\\sigma_V$はスピン配位そのものを、$\\langle i, j \\rangle$は整数$i$と$j$との順序の入ってない組みを表わす。\n",
