--- a/src/Ising_MC/Ising2d_MC.ipynb
+++ b/src/Ising_MC/Ising2d_MC.ipynb
@@ -1,4 +1,4 @@
-{
+	{
  "cells": [
   {
    "cell_type": "markdown",
@@ -45,11 +45,11 @@
     "サイト$(i,j)$、$i,j \\in \\mathbb{Z}$、におけるスピンを$\\sigma_{i j} = -1 \\, \\mathrm{or} \\, 1$とおく。\n",
     "サイト数$V$、最近接交換相互作用$J$、磁場$h$に対してハミルトニアンが\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathcal{H} \\left( V, \\sigma_V, J, h \\right)\n",
     "= -J \\sum_{\\langle i, j \\rangle} \\sigma_{i j} \\left(\\sigma_{i+1 \\ j} + \\sigma_{i \\ j+1} \\right) \n",
     "-h \\sum_{i,j} \\sigma_{i j}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "で表わされるような模型を2次元Ising模型という。\n",
     "自発磁化をもつ強磁性体を説明する簡単な模型になっている。\n",
@@ -60,9 +60,9 @@
     "\n",
     "このハミルトニアンに対して分配函数は逆温度$\\beta = 1/T$において\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "Z [V, \\beta, J, h] = \\sum_{\\sigma_V} \\exp\\left(-\\beta \\mathcal{H}\\left(V, \\sigma_V, J, h \\right) \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "と表わされる。\n",
     "この分配函数を操作することで系のあらゆる物理量が計算される。\n",
@@ -71,31 +71,31 @@
     "\n",
     "後の便利のためボルツマン因子（ボルツマンの重み）\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "P_B \\left(V, \\sigma_V, J, h \\right)\n",
     "= \\frac{\\exp\\left(-\\beta \\mathcal{H}\\left(V, \\sigma_V, J, h \\right) \\right)}{Z [V, \\beta, J, h]}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "を導入しておく。\n",
     "この定義から\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 \\leq P_B \\left(V, \\sigma_V, J, h \\right) \\leq 1\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "かつ\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\sum_{\\sigma_V} P_B \\left(V, \\sigma_V, J, h \\right) = 1\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "である。\n",
     "ボルツマン因子用いると物理量$A\\left(V, \\sigma_V, J, h \\right)$の平均は\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\left\\langle A \\right\\rangle \\left(V, J, h \\right)\n",
     "= \\sum_{\\sigma_V} A \\left(V, \\sigma_V, J, h \\right) P_B \\left( \\sigma_V, V, J, h \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "と表わされる。\n",
     "\n",
@@ -103,48 +103,48 @@
     "\n",
     "系のヘルツホルツのエネルギーは\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "f \\left(V, \\beta, J, h\\right)\n",
     "= -\\frac{1}{V \\beta} \\ln Z [V, \\beta, J, h]\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "で、系の磁化は\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "m \\left(V, \\beta, J, h\\right)\n",
     "= - \\frac{\\partial f \\left(V, \\beta, J, h\\right)}{\\partial h}\n",
     "= \\frac{1}{V \\beta} \\frac{ \\partial \\ln Z [V, \\beta, J, h]}{\\partial h}\n",
     "= \\frac{1}{V} \\left\\langle \\mathcal{M} \\right\\rangle \\left(V, \\beta, J, h \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "で与えられる。\n",
     "ただし$\\mathcal{M}\\left( \\sigma_V \\right) = \\sum_{i,j} \\sigma_{ij}$であり、$V$についての操作はここではしないので見やすさのため基本的に$V$で規格化している。\n",
     "磁化率は\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\chi \\left(V, \\beta, J, h\\right)\n",
     "= \\frac{\\partial m \\left(V, \\beta, J, h\\right)}{\\partial h}\n",
     "= \\frac{\\beta}{V} \\left( \\left\\langle \\mathcal{M}^2 \\right\\rangle \\left(V, \\beta, J, h \\right) - \\left\\langle \\mathcal{M} \\right\\rangle \\left(V, \\beta, J, h\\right)^2 \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "で得られる。\n",
     "\n",
     "内部エネルギーは\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "e \\left( V, \\beta, J, h \\right)\n",
     "= \\frac{\\partial \\left( \\beta f \\left(V, \\beta, J, h\\right) \\right)}{\\partial \\beta}\n",
     "= - \\frac{1}{V} \\frac{\\partial \\ln Z [V, \\beta, J, h]}{\\partial \\beta}\n",
     "= \\frac{1}{V} \\left\\langle \\mathcal{H} \\right\\rangle \\left(V, \\beta, J, h \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "であり、比熱は\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "c \\left(V, \\beta, J, h\\right)\n",
     "= \\beta^2 \\frac{\\partial e \\left(V, \\beta, J, h\\right)}{\\partial \\beta}\n",
     "= \\frac{\\beta^2}{V} \\left( \\left\\langle \\mathcal{H}^2 \\right\\rangle \\left(V, \\beta, J, h \\right) - \\left\\langle \\mathcal{H} \\right\\rangle \\left(V, \\beta, J, h\\right)^2 \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "で得られる。\n",
     "\n",
@@ -187,15 +187,19 @@
     "初期スピン配位を$\\sigma^{(0)}$とし、$n$回更新されたときのスピン配位を$\\sigma^{(n)}$と表わすことにする。\n",
     "以下$n$回更新されたことを時刻$n$と言うことにする。\n",
     "マルコフ連鎖をシンボリックに書けば、スピン配位$\\sigma^{(n-1)} = a$から$\\sigma^{(n)} = b$へ遷移する確率が\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "P \\left(\\sigma^{(n)} = b \\mid \\sigma^{(n-1)} =a \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "のように遷移の始点と終点との2状態のみを引数にした形で表わせる。\n",
     "\n",
     "遷移確率は\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "\\sum_{\\sigma^{(n)}} P \\left(\\sigma^{(n)} \\mid \\sigma^{(n-1)} =a \\right) = 1\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "を満たす。\n",
     "時刻$n-1$で適当なスピン配位$\\sigma^{(n-1)} = a$から次の時刻$n$で遷移しうる全ての配位への遷移確率を全て足せば$1$になる。\n",
     "また遷移確率は非負である。\n",
@@ -207,43 +211,54 @@
     "### 詳細釣り合い\n",
     "\n",
     "時刻$n$のスピン配位が$\\sigma^{(n)} = a$である確率を\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "S \\left( \\sigma^{(n)} = a\\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "と表わす。\n",
     "$S \\left( \\sigma^{(n)} \\right)$をスピン配位$\\sigma^{(n)}$の確率分布という。\n",
     "確率なので時刻$n$におけるあらゆるスピン配位に関して和を取ると\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "\\sum_{\\sigma^{(n)}} S \\left( \\sigma^{(n)}\\right) = 1\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "を満たし、各項が非負である。\n",
     "Ising模型は系も時間も離散的なので、$S$は系のサイズの次元を持ったベクトルで$P$はそれらに作用する遷移行列として扱える。\n",
     "式で書けば\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "S \\left( \\sigma^{(n)}\\right) \n",
     "&= P \\left(\\sigma^{(n)} \\mid \\sigma^{(n-1)}\\right) S \\left( \\sigma^{(n-1)}\\right) \\\\\n",
     "&= P \\left(\\sigma^{(n)} \\mid \\sigma^{(n-1)}\\right) P \\left(\\sigma^{(n-1)} \\mid \\sigma^{(n-2)}\\right) \\cdots P \\left(\\sigma^{(1)} \\mid \\sigma^{(0)}\\right) S \\left( \\sigma^{(0)}\\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "である。\n",
     "このとき配位の確率分布も遷移行列もともに時刻に依る。\n",
     "\n",
     "一方で熱平衡状態とは配位の確率分布とその遷移行列とがともに時刻に依存しない状態である。\n",
     "平衡状態は充分な回数遷移行列を作用させることで達成される考え、その時の確率を$S \\left( \\sigma^{(\\mathrm{eq})}\\right)$とすると、熱平衡状態は\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "S \\left( \\sigma^{(\\mathrm{eq})}\\right) \n",
     "= P \\left(\\sigma^{(\\mathrm{eq})} \\mid \\sigma^{(\\mathrm{eq})}\\right) S \\left( \\sigma^{(\\mathrm{eq})}\\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "を満たすように遷移するはずである。\n",
     "熱平衡状態は遷移行列の固有値$1$の固有状態を扱ってるとも見える。\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "S \\left( \\sigma^{(\\mathrm{eq})} = a_i\\right)\n",
     "= S^{(\\mathrm{eq})}_i, \\quad\n",
     "  P \\left(\\sigma^{(\\mathrm{eq})} = a_i \\mid \\sigma^{(\\mathrm{eq})} = a_j\\right)\n",
     "= P^{(\\mathrm{eq})}_{ij} \\qquad\n",
     "\\left(i,j = 1, 2, \\dots, V \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "なる成分の略記を導入しておいて式変形すると\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "S^{(\\mathrm{eq})}_i\n",
     "= \\sum_j P^{(\\mathrm{eq})}_{ij} S^{(\\mathrm{eq})}_j\n",
     "&= P^{(\\mathrm{eq})}_{ii} S^{(\\mathrm{eq})}_i + \\sum_{j \\neq i} P^{(\\mathrm{eq})}_{ij} S^{(\\mathrm{eq})}_j \\\\\n",
@@ -253,14 +268,17 @@
     "   + \\sum_{j \\neq i} \\left( P^{(\\mathrm{eq})}_{ij} S^{(\\mathrm{eq})}_j - P^{(\\mathrm{eq})}_{ji} S^{(\\mathrm{eq})}_i \\right) \\\\\n",
     "&= S^{(\\mathrm{eq})}_i \n",
     "   + \\sum_{j \\neq i} \\left( P^{(\\mathrm{eq})}_{ij} S^{(\\mathrm{eq})}_j - P^{(\\mathrm{eq})}_{ji} S^{(\\mathrm{eq})}_i \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "となる。\n",
     "ゆえに\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "P \\left(\\sigma^{(\\mathrm{eq})} = a_i \\mid \\sigma^{(\\mathrm{eq})} = a_j\\right) S \\left( \\sigma^{(\\mathrm{eq})} = a_j\\right)\n",
     "= P \\left(\\sigma^{(\\mathrm{eq})} = a_j \\mid \\sigma^{(\\mathrm{eq})} = a_i\\right) S \\left( \\sigma^{(\\mathrm{eq})} = a_i\\right)\n",
     "\\qquad \\left( i \\neq j \\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "となる。\n",
     "このことを詳細釣り合い条件と呼ぶ。\n",
     "\n",
@@ -269,19 +287,23 @@
     "マルコフ連鎖において熱平衡であれば詳細釣り合い条件を満たすこと（十分条件）しか述べてないので必要性についてはここでは述べてない。\n",
     "\n",
     "具体的にボルツマン因子を使って説明すると（記号的に紛らわしいが）$S$に対応するのが$P_B$なので詳細釣り合い条件は\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "\\frac{P \\left(\\sigma^{(\\mathrm{eq})} = a_j \\mid \\sigma^{(\\mathrm{eq})} = a_i \\right)}{P \\left(\\sigma^{(\\mathrm{eq})} = a_i \\mid \\sigma^{(\\mathrm{eq})} = a_j \\right)}\n",
     "&= \\frac{S \\left( \\sigma^{(\\mathrm{eq})} = a_j \\right)}{S \\left( \\sigma^{(\\mathrm{eq})} = a_i \\right)} \\\\\n",
     "&= \\frac{P_B \\left(V, \\sigma_V = a_j, J, h \\right)}{P_B \\left(V, \\sigma_V = a_i, J, h \\right)} \\\\\n",
     "&= \\exp \\left[ -\\beta \\left( \\mathcal{H}\\left(V, \\sigma_V = a_j, J, h \\right) - \\mathcal{H}\\left(V, \\sigma_V = a_i, J, h \\right)\\right) \\right]\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "と書ける。\n",
     "この条件さえ満たせば確率としての非負$1$以下の条件を除けば任意性がある。\n",
     "とくに工夫をしなければ遷移確率を\n",
-    "\\begin{align}\n",
+    "$$\n",
+    "\\begin{align*}\n",
     "P \\left(\\sigma^{(\\mathrm{eq})} = a_j \\mid \\sigma^{(\\mathrm{eq})} = a_i \\right)\n",
     "= \\mathrm{min} \\left\\{ 1, \\exp \\left[ -\\beta \\left( \\mathcal{H}\\left(V, \\sigma_V = a_j, J, h \\right) - \\mathcal{H}\\left(V, \\sigma_V = a_i, J, h \\right)\\right) \\right] \\right\\}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
+    "$$\n",
     "と決めれば条件を満たす。\n",
     "配位が$a_i$から$a_j$へ更新されたときにハミルトニアンの値が小さくなっていればボルツマン因子の値が$1$より大きくなるので遷移確率は$1$となり（規格化）、ハミルトニアンの値が大きくなっていれば対応するボルツマン因子の値が遷移確率となる。\n",
     "ハミルトニアンが小さくなる方向へは必ず更新されるが、ハミルトニアンの値が大きくなる方向へも一定の確率で更新される。\n",
