--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -11,6 +11,19 @@
     "$$"
    ]
   },
+  "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 行列\n",
+    "\n",
+    "$$\n",
+    "nagaisiki\n",
+    "meccha nagai shiki\n",
+    "$$"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
