--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -18,8 +18,10 @@
     "## 行列\n",
     "\n",
     "$$\n",
-    "nagaisiki\n",
+    "\begin{align}\n",
+    "nagai shiki\n",
     "meccha nagai shiki\n",
+    "\end{align}\n",
     "$$"
    ]
   },
