--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -18,10 +18,10 @@
     "## 行列\n",
     "\n",
     "$$\n",
-    "\begin{align}\n",
+    "\\begin{align}\n",
     "nagai shiki\n",
     "meccha nagai shiki\n",
-    "\end{align}\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
