--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -21,6 +21,8 @@
     "\\begin{align}\n",
     "nagai shiki\n",
     "meccha nagai shiki\n",
+    "\\\\",
+    "meccha nagai shiki\n",
     "\\end{align}\n",
     "$$"
    ]
