--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -19,10 +19,10 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "nagai shiki\n",
+    "nagai &shiki\n",
     "meccha nagai shiki\n",
     "\\\\",
-    "meccha nagai shiki\n",
+    "&meccha nagai shiki\n",
     "\\end{align}\n",
     "$$"
    ]
