--- a/src/matrix.ipynb
+++ b/src/matrix.ipynb
@@ -18,12 +18,12 @@
     "## 行列\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "nagai &shiki\n",
     "meccha nagai shiki\n",
     "\\\\",
     "&meccha nagai shiki\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
